index.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    background-color: black;
    color: white;
    font-size: 18px;
}

i:hover {
    color: rgb(67, 67, 170);
}

::-webkit-scrollbar {
    width: 5px;
    height: 8px;
    background-color: #aaa; /* or add it to the track */
    }
    
/* Add a thumb */
::-webkit-scrollbar-thumb {
background: #000;
}

/* ***********HEADER************** */
.header {
    height: 2vh;
    background-color: rgb(17, 16, 16);
}

/* *************BODY SECTION**************** */

.body {
    height: 86vh;
    display:flex;
    margin: auto;
}

/* ********FIRST SECTION************* */


.first-section {
    display: flex;
    flex-direction: column;
    border-bottom: 3px solid rgb(67, 67, 170);
    width: 23%;
    height: 100%;
    margin-right: 1px;
}

.nav-bar {
    display: flex;
    justify-content: center;
    flex-direction: column;
    background-color: rgb(17, 16, 16);
    height: 20%;
    color: white;
}

.navbar-button {
    display: flex;
    align-items: center;
    padding: 5px;
    cursor: pointer;
    background-color: rgb(17, 16, 16);
    border-radius: 3px; 
    color: white;
    font-size: 17px;
    height: 100%;
}

.iconspacing {
    margin: 5%;
    background-color: rgb(17, 16, 16);
}

.playlist {
    display: flex;
    flex-direction: column;
    height: 80%;
    overflow-y: auto;
    border-radius: 5px;
    background-color: rgb(17, 16, 16);
}

.subheader {
    display: flex;
    align-items: center;
    color: white;
    width: 100%;
}

.create {
    display: flex;
    width: 100%;
    align-items: center;
    position: relative;
}

.iconright {
    position: absolute;
    right: 0;
    cursor: pointer;
    background-color: #000;
}

.liked {
    margin: 2px auto;
    padding-left: 20px;
    background-color: rgb(56, 55, 55);
    border-radius: 5px;
    height: 50px;
    text-align: center;
    font-size: 16px;
    cursor: pointer;
}

.liked:hover {
    background-color: rgb(67, 67, 170);
    font-family: 'Marcellus', serif;
    font-weight: 520;
    padding-left: 35%;
}

/* ************SECOND SECTION******************* */

.songs {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 54%;
    height: 100%;
    z-index: 3;
    border-bottom: 3px solid rgb(67, 67, 170);
}

.name {
    background-color: rgb(67, 67, 170);
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 10%;
    font-size: 1.3rem;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    color: white;
    font-family: 'Marcellus', serif;
}

.songs-section {
    border-top: 5px solid rgb(8, 8, 8);
    background-color: rgb(17, 16, 16);
    border-top-left-radius: 15px;
    border-top-right-radius: 15px;
    padding: 20px;
    height: 90%;
    width: 100%;
    margin-left: 5px;
    overflow-y: auto;
    margin-top: 10px;
}

.row {
    background-color: rgb(17, 16, 16);
}

.cards {
    margin-bottom: 4%;
    background-color: rgb(17, 16, 16);
    background-color: white;
}

.h-100 {
    width: 100%;
    padding: 0;
}

.play-icon {
    position: absolute;
    /* right: 0;
    bottom: 0;
    margin-right: 11%;
    margin-bottom: 38%; */
    right: 0;
    font-size: 22px;
    background-color: transparent;
    /* visibility: hidden; */
    
}

.play-icon i {
    background-color: transparent;
    color: rgb(48, 180, 62);
    /* width: 100%; */
}

.card-img-top {
    padding: 8px;
    background-color: rgb(13, 13, 13);
}

.song-info {
    height: 70px;
}

.music-name {
    padding: 5%;
    font-weight: bolder;
    font-family: 'Marcellus', serif;
    font-size: 15px;
}

.duration {
    padding: 3%;
    font-size: 12px;
    font-weight: 520;
    background-color: rgb(67, 67, 170);
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
}



/* ************THIRD SECTION******************* */

.now-playing {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 23%;
    height: 100%;
    position: relative;
    margin: auto 1px;
    background-color: rgb(17, 16, 16);
    z-index: 3;
    border-bottom: 3px solid rgb(67, 67, 170);
}

.now-playing-info {
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    height: 16%;
    width: 100%;
    background-color: rgb(17, 16, 16);
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-family: 'Kalam', cursive;
    font-size: 25px;
}

.playing-song-display {
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 71%; 
    background-color: rgb(17, 16, 16);
} 

.playing-song-display img {
    align-items: center;
    height: 100%
}

.songdetails {
    align-items: center;
    height: 13%;
    color: white;
    display: flex;
    flex-direction: row;
    padding: 5%;
    background-color: rgb(17, 16, 16);
}


.covermusicname {
    font-family: 'Marcellus', serif;
    font-size: 22px;
    font-weight: bolder;
    background-color: rgb(17, 16, 16);
}

.covericon{
    display: flex;
    position: absolute;
    right: 0;
    margin: auto 5%;
    background-color: rgb(17, 16, 16);
}

.covericon i {
    background-color: rgb(17, 16, 16);
    margin: 7px;
    cursor: pointer;
}


/* ************FOOTER SECTION******************* */


.footer {
    height: 12vh;
    position: sticky;
    bottom: 0;
    padding: 0;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column; 
}

.footersong {
    display: flex;
    align-items: center;
    position: absolute;
    left: 0;
    margin: auto 1%;
    height: 90%;
}

.footersong img {
    max-width: 100%;
    max-height: 100%;
    display: block;
    margin: auto;
}

.footersongname {
    margin: 5px;
    font-size: 15px;
}

.footcovericon {
    margin: 5px;
    font-size: 15px;
    cursor: pointer;
}

.controls {
    width: 95%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.controls .fas {
    cursor: pointer;
    margin: auto 9px;
    font-size: 35px;
}

.controls .smallicon {
    font-size: 20px;
    margin: auto 1%;
}

.volumebar {
    position: absolute;
    right: 0;
    width: 20%;
    display: flex;
    margin: 1%;
    margin-top: 2.7%;
    justify-content: center;
    flex-direction: row;
    align-items: center;
}

#myVolumeBar{
    width: 40%;
    background-color: white; 
    accent-color: rgb(67, 67, 170);
    height: 2px;
    cursor: pointer;
    right: 0;
    position: absolute;
    margin: 4%;
}

.volume-icon {
    margin-right: 1px;
    cursor: pointer;

}

.timebar {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 44vw;
    border-radius: 4px;
    bottom: 0;
}

#myProgressBar{
    display: flex;
    width: 100%;
    cursor: pointer;
}

.progressBar {
    accent-color: rgb(67, 67, 170);
    height: 2px;
}

#timerstart {
    font-size: 12px;
    margin: 5px;
    color: rgb(246, 231, 231);
    border-end-end-radius: 4px;
    border-start-end-radius: 4px;
}

#timerend {
    font-size: 12px;
    margin: 5px;
    color: rgb(246, 231, 231);
    border-end-end-radius: 4px;
    border-start-end-radius: 4px;
}

